@@ -20,6 +20,7 @@ Changes to squid-2.6 (not yet released)
 	- Improved SSL support with hardware offload, client certificate
 	  support (primitive), chained certificates and numerous bug fixes
 	- Linux epoll support
+	- Optional support for blank passwords
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
